# CSIT-Materials

./: .gitignore  .gitmodules
ACA-4sem/task1/: a.out  sorts.cpp
ACA-4sem/task1_anal/: conf.typ  main.typ
ACA-4sem/task2/: main.typ  sorts.cpp  tester.cpp
ACA-4sem/task3/: main.cpp  trees.cpp  trees.hpp
ACA-4sem/task4/: main.cpp  trees.cpp  trees.hpp
ACA-4sem/task5/: main.cpp  trees.cpp  trees.hpp
ACA-4sem/task6/: main.cpp
ACA-4sem/task7/: main.cpp
ACA-4sem/task8/: main.cpp
ASM-3sem/lab1/: table1.csv  table3.csv
ASM-3sem/lab1/staff/: task1.ASM  task3.ASM
ASM-3sem/lab2/: conf.typ  lab2.typ
ASM-3sem/lab2/sections/: questions.typ
ASM-3sem/lab2/staff/: TASK1.ASM
ASM-3sem/lab3/: main.typ
ASM-3sem/lab3/staff/: task1.asm  task2.asm  test.asm
ASM-3sem/lab4/: lab4.typ
ASM-3sem/lab4/sections/: questions.typ
ASM-3sem/lab4/staff/: dosopen.sh  task1.asm
ASM-3sem/lab5/: lab5.typ
ASM-3sem/lab5/sections/: questions.typ
ASM-3sem/lab5/staff/: task.asm
ASM-3sem/lab6/: lab6.typ  task.asm
ASM-3sem/lab8/: lab8.typ  sum_program.asm  task.asm
BackEnd-3sem/tic_tac_toe/: game.py
BackEnd-3sem/tic_tac_toe/gameparts/: parts.py
Graphics-4sem/: .gitattributes  CMakeLists.txt  build.sh
Graphics-4sem/Libraries/raygui/: CMakeLists.txt
Graphics-4sem/Projects/lab1/: CMakeLists.txt  main.cpp
Graphics-4sem/Projects/lab2/: figure.hpp  hare.hpp  main.cpp
Graphics-4sem/Projects/lab3/: figure.hpp  hare.hpp  main.cpp  matrix.hpp  snail.txt  transform.hpp
Graphics-4sem/Projects/lab4/: CMakeLists.txt  Geometric.txt  clip.cpp  clip.hpp  figure.hpp  main.cpp  screen.hpp
ITIP-2sem/STL_1/: STL_1_1.cpp  STL_1_2.cpp  STL_1_3.cpp
ITIP-2sem/STL_2/: STL2_3.cpp  STL_2_1.cpp  STL_2_2.cpp  file_to_read.txt  test.cpp
ITIP-2sem/graphs/: graph_1.cpp  graph_2.cpp  graph_3.cpp  graph_4.cpp  graph_5.cpp  input.txt
ITIP-2sem/graphs_elective/: elective.cpp  input.txt
ITIP-2sem/graphs_homework/: input.txt  task1.cpp  task2.cpp
ITIP-2sem/hangman_homework/: hangman.cpp  last_words.txt
ITIP-2sem/hash/: hash_1.cpp  hash_2.cpp  hash_lib.cpp  hash_lib.h  input.txt  output.txt
ITIP-2sem/sorts/: output.txt  sort3_11.cpp  sorts1_2.cpp  sorts2_10.cpp
ITIP-2sem/sorts2/: input.txt  output.txt  sorts2_1_1.cpp  sorts2_2_9.cpp  sorts2_3_11.cpp
ITIP-2sem/sorts_homework/: pick.cpp
ITIP-2sem/stack_queue/: queue_1.cpp  queue_2.cpp  stack_3.cpp  stack_4.cpp  test.cpp
ITIP-2sem/struct_homework/: knight.cpp  prefix_calc.cpp
ITIP-2sem/trees/: tree.h  tree_1.cpp
ITIP/struct_homework/: grahp.cpp
ITIP/trees/: tree.cpp  tree_2.cpp  tree_3.cpp
MIT/latex_1/: 010.txt  12.tex  90.tex  article.tex  book.tex
MIT/latex_2/: 29.tex
OOP-3sem/: 17_Zhelezko_251.cpp  3t_Zhelezko_251.cpp  7_Zhelezko_251.cpp
OOP-3sem/3task/: Rational.cpp  Rational.h  RationalList.cpp  RationalList.h  main.cpp
OOP-3sem/4task/: CMakeLists.txt  build.sh  make.bat
OOP-3sem/4task/src/: config.hpp  main.cpp  train_simulation.cpp  train_simulation.hpp
OOP-3sem/4task/test/: CMakeLists.txt  build.sh  main.cpp  statistics.hpp  train_simulation.hpp
TASM-20250922/lab1/: conf.typ  main.typ  table2.csv
TASM-20250922/lab1/staff/: task2.ASM
TASM-20250922/lab2/sections/: task1.typ  task2.typ
TASM-20250922/lab2/staff/: TASK2.ASM
